fix: remove usage of deprecated URL constructor