@@ -25,10 +25,7 @@ import com.google.gson.JsonSyntaxException;
 import net.technicpack.launchercore.TechnicConstants;
 
 import java.io.*;
-import java.net.MalformedURLException;
-import java.net.SocketTimeoutException;
-import java.net.URL;
-import java.net.URLConnection;
+import java.net.*;
 import java.nio.charset.StandardCharsets;
 
 public abstract class RestObject {
@@ -39,7 +36,7 @@ public abstract class RestObject {
 
     public static <T extends RestObject> T getRestObject(Class<T> restObject, String url) throws RestfulAPIException {
         try {
-            URLConnection conn = new URL(url).openConnection();
+            URLConnection conn = new URI(url).toURL().openConnection();
             conn.setRequestProperty("User-Agent", TechnicConstants.getUserAgent());
             conn.setConnectTimeout(15000);
             conn.setReadTimeout(15000);
@@ -61,8 +58,8 @@ public abstract class RestObject {
             return result;
         } catch (SocketTimeoutException e) {
             throw new RestfulAPIException(String.format("Timed out accessing URL [%s]", url), e);
-        } catch (MalformedURLException e) {
-            throw new RestfulAPIException(String.format("Invalid URL [%s]", url), e);
+        } catch (URISyntaxException | MalformedURLException e) {
+            throw new RestfulAPIException(String.format("Invalid URI [%s]", url), e);
         } catch (JsonSyntaxException e) {
             throw new RestfulAPIException(String.format("Error parsing response JSON at URL [%s]", url), e);
         } catch (JsonIOException | IOException e) {
